--- a/modules/vault/templates/values.yaml
+++ b/modules/vault/templates/values.yaml
@@ -89,6 +89,8 @@ vault:
   # - name: extra-volume
   #   secret:
   #     secretName: some-secret
+  liveness:
+    aliveIfUninitialized: true
   readiness:
     readyIfSealed: false
     readyIfStandby: true
