--- a/modules/prometheus/templates/alertmanager.yaml
+++ b/modules/prometheus/templates/alertmanager.yaml
@@ -211,3 +211,5 @@ alertmanager:
     servicePort: ${service_port}
     # nodePort: 30000
     type: ${service_type}
+
+alertmanagerFiles: = "${alertmanager_files}"
