--- a/modules/prometheus/templates/alertmanager.yaml
+++ b/modules/prometheus/templates/alertmanager.yaml
@@ -212,4 +212,5 @@ alertmanager:
     # nodePort: 30000
     type: ${service_type}
 
-alertmanagerFiles: = "${alertmanager_files}"
+alertmanagerFiles:
+${alertmanager_files}
