--- a/modules/prometheus/templates/node_exporter.yaml
+++ b/modules/prometheus/templates/node_exporter.yaml
@@ -1,7 +1,7 @@
 nodeExporter:
   ## If false, node-exporter will not be installed
   ##
-  enabled: ${node_exporter_enable}
+  enabled: ${enable}
 
   ## If true, node-exporter pods share the host network namespace
   ##
