--- a/modules/prometheus/templates/general.yaml
+++ b/modules/prometheus/templates/general.yaml
@@ -1,5 +1,24 @@
 imagePullSecrets: ${image_pull_secrets}
 
+## Define serviceAccount names for components. Defaults to component's fully qualified name.
+##
+serviceAccounts:
+  alertmanager:
+    create: true
+    name: ${alertmanager_service_account}
+  kubeStateMetrics:
+    create: true
+    name: ${kube_state_metrics_service_account}
+  nodeExporter:
+    create: true
+    name: ${node_exporter_service_account}
+  pushgateway:
+    create: true
+    name: ${pushgateway_service_account}
+  server:
+    create: true
+    name: ${server_service_account}
+
 ## Monitors ConfigMap changes and POSTs to a URL
 ## Ref: https://github.com/jimmidyson/configmap-reload
 ##
