--- a/modules/consul/templates/values.yaml
+++ b/modules/consul/templates/values.yaml
@@ -12,11 +12,11 @@ server:
     storageClass: ${server_storage_class}
     resources: |
         requests:
-            cpu: "${server_cpu_request}"
-            memory: "${server_memory_request}"
+            cpu: ${server_cpu_request}
+            memory: ${server_memory_request}
         limits:
-            cpu: "${server_cpu_limit}"
-            memory: "${server_memory_limit}"
+            cpu: ${server_cpu_limit}
+            memory: ${server_memory_limit}
     disruptionBudget:
         enabled: true
     extraConfig: ${server_extra_config}
@@ -32,11 +32,11 @@ client:
     grpc: false # Required for connect
     resources: |
         requests:
-            cpu: "${client_cpu_request}"
-            memory: "${client_memory_request}"
+            cpu: ${client_cpu_request}
+            memory: ${client_memory_request}
         limits:
-            cpu: "${client_cpu_limit}"
-            memory: "${client_memory_limit}"
+            cpu: ${client_cpu_limit}
+            memory: ${client_memory_limit}
     extraConfig: ${client_extra_config}
     extraVolumes: ${client_extra_volumes}
     tolerations: ${client_tolerations}
