Add fullnameOverride for Consul

--- a/modules/consul/templates/values.yaml
+++ b/modules/consul/templates/values.yaml
@@ -1,3 +1,5 @@
+${fullname_override != "" ? "fullnameOverride: ${fullname_override}" : ""}
+
 # For the full suite of supported values, see https://www.consul.io/docs/platform/k8s/helm.html
 global:
     domain: ${consul_domain}
