Update Consul Module to Terraform 0.12 (#17)
* Update Consul Module to Terraform 0.12

* Update tests

* Remove TTY

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,26 @@ services:
 env:
   global:
     - LINT_IMAGE=lint
+    - LINT_IMAGE_011=lint-011
 
 install:
   - docker build -t ${LINT_IMAGE} -f tests/Dockerfile .
+  - docker build -t ${LINT_IMAGE_011} -f tests_011/Dockerfile .
 
 script:
-  - docker run --rm -ti --entrypoint terraform ${LINT_IMAGE} fmt -check=true ./
+  # - docker run --rm -ti --entrypoint terraform ${LINT_IMAGE} fmt -check=true ./
   - |
     find . \
       -not -path '*/\.*' \
+      -not -path './modules/consul/*' \
       -not -path './vendor/*' \
       -type f -iname '*.tf' \
-      -printf '%h\n' | sort | uniq | xargs -I{} bash -c "echo {} && docker run --rm ${LINT_IMAGE} {}"
+      -printf '%h\n' | sort | uniq | xargs -I{} bash -c "echo {} && docker run --rm --entrypoint terraform ${LINT_IMAGE_011} fmt -check=true {}  && docker run --rm ${LINT_IMAGE_011} {}"
+  - |
+    find . \
+      -path './modules/consul/*' \
+      -type f -iname '*.tf' \
+      -printf '%h\n' | sort | uniq | xargs -I{} bash -c "echo {} && docker run --rm --entrypoint terraform ${LINT_IMAGE} fmt -check=true {}  && docker run --rm ${LINT_IMAGE} {}"
 branches:
   only:
   - master
