--- a/.travis.yml
+++ b/.travis.yml
@@ -17,16 +17,16 @@ script:
   - |
     find . \
       -not -path '*/\.*' \
-      -not -path './modules/consul/*' \
-      -not -path './modules/vault/*' \
+      -not -path './modules/cloudsql_backup/*' \
+      -not -path './modules/consul_backup/*' \
       -not -path './vendor/*' \
       -type f -iname '*.tf' \
-      -printf '%h\n' | sort | uniq | xargs -I{} bash -c "echo {} && docker run --rm --entrypoint terraform ${LINT_IMAGE_011} fmt -check=true {}  && docker run --rm ${LINT_IMAGE_011} {}"
+      -printf '%h\n' | sort | uniq | xargs -I{} bash -c "echo {} && docker run --rm --entrypoint terraform ${LINT_IMAGE} fmt -check=true {}  && docker run --rm ${LINT_IMAGE} {}"
   - |
-    for module in "./modules/consul" "./modules/vault"; do \
+    for module in "./modules/cloudsql_backup" "./modules/consul_backup"; do \
       echo "${module}" \
-      && docker run --rm --entrypoint terraform ${LINT_IMAGE} fmt -check=true "${module}" \
-      && docker run --rm ${LINT_IMAGE} "${module}"; \
+      && docker run --rm --entrypoint terraform ${LINT_IMAGE_011} fmt -check=true "${module}" \
+      && docker run --rm ${LINT_IMAGE_011} "${module}"; \
       done
 
 branches:
