Resursively check fmt

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - docker build -t ${LINT_IMAGE} -f tests/Dockerfile .
 
 script:
-  - docker run --rm -ti --entrypoint terraform ${LINT_IMAGE} fmt -check=true ./
+  - docker run --rm -ti --entrypoint terraform ${LINT_IMAGE} fmt -check=true --recursive --diff ./
   - |
     find . \
       -not -path '*/\.*' \
