[vault] Support additional label serlectors for service

--- a/modules/vault/templates/values.yaml
+++ b/modules/vault/templates/values.yaml
@@ -22,6 +22,7 @@ service:
   port: ${service_port}
   clusterIP: ${service_cluster_ip}
   annotations: ${service_annotations}
+  additionalSelector: ${service_additional_selector}
 
 ingress:
   enabled: ${ingress_enabled}
