--- a/modules/vault/templates/values.yaml
+++ b/modules/vault/templates/values.yaml
@@ -1,118 +1,394 @@
-fullnameOverride: ${fullname_override}
+# Available parameters and their default values for the Vault chart.
 
-replicaCount: ${replica}
+global:
+  # enabled is the master enabled switch. Setting this to true or false
+  # will enable or disable all the components within this chart by default.
+  enabled: ${global_enabled}
+  # Image pull secret to use for registry authentication.
+  imagePullSecrets: []
+  # imagePullSecrets:
+  #   - name: image-pull-secret
+  # TLS for end-to-end encrypted transport
+  tlsDisable: true
 
-image:
-  repository: ${vault_image}
-  tag: ${vault_tag}
+injector:
+  # True if you want to enable vault agent injection.
+  enabled: ${injector_enabled}
 
-consulAgent:
-  repository: ${consul_image}
-  tag: ${consul_tag}
-  join: ${consul_join}
-  gossipKeySecretName: ${consul_gossip_secret_key_name}
+  # External vault server address for the injector to use. Setting this will
+  # disable deployment of a vault server along with the injector.
+  externalVaultAddr: "${external_vault_addr}"
 
-service:
-  name: ${service_name}
-  type: ${service_type}
-  # Assign a static LB IP
-  loadBalancerIP: ${load_balancer_ip}
-  loadBalancerSourceRanges: ${load_balancer_source_ranges}
-  externalPort: ${service_external_port}
-  port: ${service_port}
-  clusterIP: ${service_cluster_ip}
-  annotations: ${service_annotations}
-  additionalSelector: ${service_additional_selector}
+  # image sets the repo and tag of the vault-k8s image to use for the injector.
+  image:
+    repository: ${injector_image_repository}
+    tag: "injector_image_tag"
+    pullPolicy: IfNotPresent
 
-ingress:
-  enabled: ${ingress_enabled}
-  labels: ${ingress_labels}
-  hosts: ${ingress_hosts}
-  # Used to create Ingress record (should used with service.type: ClusterIP).
-  # hosts:
-  #  - chart-example.local
-  # annotations:
-  #   kubernetes.io/ingress.class: nginx
-  #   kubernetes.io/tls-acme: "true"
-  # tls:
-  #   Secrets must be manually created in the namespace.
-  #   - secretName: chart-example-tls
-  #     hosts:
-#       - chart-example.local
+  # agentImage sets the repo and tag of the Vault image to use for the Vault Agent
+  # containers.  This should be set to the official Vault image.  Vault 1.3.1+ is
+  # required.
+  agentImage:
+    repository: ${agent_image_repository}
+    tag: "${agent_image_tag}"
 
-resources:
-  requests:
-    cpu: ${cpu_request}
-    memory: ${memory_request}
-  limits:
-    cpu: ${cpu_limit}
-    memory: ${memory_limit}
+  # Mount Path of the Vault Kubernetes Auth Method.
+  authPath: ${auth_path}
 
-affinity: ${affinity}
-nodeSelector: ${node_selector}
-tolerations: ${tolerations}
-annotations: ${annotations}
-labels: ${labels}
-podAnnotations: ${pod_annotations}
-lifecycle: ${lifecycle}
-priorityClassName: ${pod_priority_class}
-minReadySeconds: ${min_ready_seconds}
+  # Configures the log verbosity of the injector. Supported log levels: Trace, Debug, Error, Warn, Info
+  logLevel: "${injector_log_level}"
 
-serviceAccount:
-  ## Specifies whether a ServiceAccount should be created
-  ##
-  create: true
-  ## Annotations to set for the ServiceAccount
-  # annotations:
-    # my-annotation: my-annotation-value
-  annotations: ${service_account_annotation}
-  ## The name of the ServiceAccount to use.
-  ## If not set and create is true, a name is generated using the fullname template
-  # name:
+  # Configures the log format of the injector. Supported log formats: "standard", "json".
+  logFormat: "${injector_log_format}"
 
-vault:
-  # Only used to enable dev mode. When in dev mode, the rest of this config
-  # section below is not used to configure Vault. See
-  # https://www.vaultproject.io/intro/getting-started/dev-server.html for more
-  # information.
-  dev: ${vault_dev}
-  # Allows the mounting of various custom secrets th enable production vault
-  # configurations. The comments show an example usage for mounting a TLS
-  # secret. The two fields required are a secretName indicating the name of
-  # the Kubernetes secret (created outside of this chart), and the mountPath
-  # at which it should be mounted in the Vault container.
-  customSecrets: ${vault_secret_volumes}
-    # - secretName: vault-tls
-    #   mountPath: /vault/tls
+  # Configures all Vault Agent sidecars to revoke their token when shutting down
+  revokeOnShutdown: ${revoke_on_shutdown}
+
+  # namespaceSelector is the selector for restricting the webhook to only
+  # specific namespaces.
+  # See https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#matching-requests-namespaceselector
+  # for more details.
+  # Example:
+  # namespaceSelector:
+  #    matchLabels:
+  #      sidecar-injector: enabled
+  namespaceSelector: ${namespace_selector}
+
+  certs:
+    # secretName is the name of the secret that has the TLS certificate and
+    # private key to serve the injector webhook. If this is null, then the
+    # injector will default to its automatic management mode that will assign
+    # a service account to the injector to generate its own certificates.
+    secretName: null
+
+    # caBundle is a base64-encoded PEM-encoded certificate bundle for the
+    # CA that signed the TLS certificate that the webhook serves. This must
+    # be set if secretName is non-null.
+    caBundle: ""
+
+    # certName and keyName are the names of the files within the secret for
+    # the TLS cert and private key, respectively. These have reasonable
+    # defaults but can be customized if necessary.
+    certName: tls.crt
+    keyName: tls.key
+
+  resources: ${injector_resources}
+  # resources:
+  #   requests:
+  #     memory: 256Mi
+  #     cpu: 250m
+  #   limits:
+  #     memory: 256Mi
+  #     cpu: 250m
+
+  # extraEnvironmentVars is a list of extra enviroment variables to set in the
+  # injector deployment.
+  extraEnvironmentVars: ${injector_env}
+    # KUBERNETES_SERVICE_HOST: kubernetes.default.svc
+
+  # Affinity Settings for injector pods
+  # This should be a multi-line string matching the affinity section of a
+  # PodSpec.
+  affinity: ${injector_affinity}
+
+  # Toleration Settings for injector pods
+  # This should be a multi-line string matching the Toleration array
+  # in a PodSpec.
+  tolerations: ${injector_tolerations}
+
+  # nodeSelector labels for injector pod assignment, formatted as a muli-line string.
+  # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
+  # Example:
+  # nodeSelector: |
+  #   beta.kubernetes.io/arch: amd64
+  nodeSelector: null
+
+server:
+  # Resource requests, limits, etc. for the server cluster placement. This
+  # should map directly to the value of the resources field for a PodSpec.
+  # By default no direct resource request is made.
+
+  image:
+    repository: ${server_image_repository}
+    tag: "${server_image_tag}"
+    # Overrides the default Image Pull Policy
+    pullPolicy: IfNotPresent
+
+  # Configure the Update Strategy Type for the StatefulSet
+  # See https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#update-strategies
+  updateStrategyType: ${server_update_strategy}
+
+  resources: ${server_resources}
+  # resources:
+  #   requests:
+  #     memory: 256Mi
+  #     cpu: 250m
+  #   limits:
+  #     memory: 256Mi
+  #     cpu: 250m
+
+  # Ingress allows ingress services to be created to allow external access
+  # from Kubernetes to access Vault pods.
+  ingress:
+    enabled: ${ingress_enabled}
+    labels: ${ingress_labels}
+      # traffic: external
+    annotations: ${ingress_annotations}
+      # |
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    hosts: ${ingress_hosts}
+
+    tls: ${ingress_tls}
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+
+
+  # authDelegator enables a cluster role binding to be attached to the service
+  # account.  This cluster role binding can be used to setup Kubernetes auth
+  # method.  https://www.vaultproject.io/docs/auth/kubernetes.html
+  authDelegator:
+    enabled: ${enable_auth_delegator}
+
+  # extraContainers is a list of sidecar containers. Specified as a raw YAML string.
+  extraContainers: ${server_extra_containers}
+
+  # shareProcessNamespace enables process namespace sharing between Vault and the extraContainers
+  # This is useful if Vault must be signaled, e.g. to send a SIGHUP for log rotation
+  shareProcessNamespace: ${server_share_pid}
+
+  # extraArgs is a string containing additional Vault server arguments.
+  extraArgs: "${server_extra_args}"
+
+  # Used to define custom readinessProbe settings
+  readinessProbe:
+    enabled: ${server_readiness_probe_enable}
+    # If you need to use a http path instead of the default exec
+    path: ${server_readiness_probe_path}
+  # Used to enable a livenessProbe for the pods
+  livenessProbe:
+    enabled: ${server_liveness_probe_enable}
+    path: ${server_liveness_probe_path}
+    initialDelaySeconds: 60
+
+  # Used to set the sleep time during the preStop step
+  preStopSleepSeconds: 5
+
+  # extraEnvironmentVars is a list of extra enviroment variables to set with the stateful set. These could be
+  # used to include variables required for auto-unseal.
+  extraEnvironmentVars: ${server_env}
+    # GOOGLE_REGION: global
+    # GOOGLE_PROJECT: myproject
+    # GOOGLE_APPLICATION_CREDENTIALS: /vault/userconfig/myproject/myproject-creds.json
+
+  # extraSecretEnvironmentVars is a list of extra enviroment variables to set with the stateful set.
+  # These variables take value from existing Secret objects.
+  extraSecretEnvironmentVars: ${server_secret_env}
+    # - envName: AWS_SECRET_ACCESS_KEY
+    #   secretName: vault
+    #   secretKey: AWS_SECRET_ACCESS_KEY
+
+  # extraVolumes is a list of extra volumes to mount. These will be exposed
+  # to Vault in the path `/vault/userconfig/<name>/`. The value below is
+  # an array of objects, examples are shown below.
+  extraVolumes: ${server_volumes}
+    # - type: secret (or "configMap")
+    #   name: my-secret
+    #   path: null # default is `/vault/userconfig`
+
+  # Affinity Settings
+  # Commenting out or setting as empty the affinity variable, will allow
+  # deployment to single node services such as Minikube
+  affinity: ${server_affinity}
+  # affinity: |
+  #   podAntiAffinity:
+  #     requiredDuringSchedulingIgnoredDuringExecution:
+  #       - labelSelector:
+  #           matchLabels:
+  #             app.kubernetes.io/name: {{ template "vault.name" . }}
+  #             app.kubernetes.io/instance: "{{ .Release.Name }}"
+  #             component: server
+  #         topologyKey: kubernetes.io/hostname
+
+  # Toleration Settings for server pods
+  # This should be a multi-line string matching the Toleration array
+  # in a PodSpec.
+  tolerations: ${server_tolerations}
+
+  # nodeSelector labels for server pod assignment, formatted as a muli-line string.
+  # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
+  # Example:
+  # nodeSelector: |
+  #   beta.kubernetes.io/arch: amd64
+  nodeSelector: {}
+
+  # Extra labels to attach to the server pods
+  # This should be a multi-line string mapping directly to the a map of
+  # the labels to apply to the server pods
+  extraLabels: ${server_labels}
+
+  # Extra annotations to attach to the server pods
+  # This should be a multi-line string mapping directly to the a map of
+  # the annotations to apply to the server pods
+  annotations: ${server_annotations}
+
+  # Enables a headless service to be used by the Vault Statefulset
+  service:
+    enabled: true
+    # clusterIP controls whether a Cluster IP address is attached to the
+    # Vault service within Kubernetes.  By default the Vault service will
+    # be given a Cluster IP address, set to None to disable.  When disabled
+    # Kubernetes will create a "headless" service.  Headless services can be
+    # used to communicate with pods directly through DNS instead of a round robin
+    # load balancer.
+    # clusterIP: None
+
+    # Configures the service type for the main Vault service.  Can be ClusterIP
+    # or NodePort.
+    type: ${service_type}
+
+    # If type is set to "NodePort", a specific nodePort value can be configured,
+    # will be random if left blank.
+    nodePort: ${node_port}
+
+    # Port on which Vault server is listening
+    port: 8200
+    # Target port to which the service should be mapped to
+    targetPort: 8200
+    # Extra annotations for the service definition. This should be a multi-line
+    # string formatted as a map of the annotations to apply to the service.
+    annotations: ${service_annotations}
+
+  # This configures the Vault Statefulset to create a PVC for data
+  # storage when using the file or raft backend storage engines.
+  # See https://www.vaultproject.io/docs/configuration/storage/index.html to know more
+  dataStorage:
+    enabled: ${data_storage_enable}
+    # Size of the PVC created
+    size: ${data_storage_size}
+    # Name of the storage class to use.  If null it will use the
+    # configured default Storage Class.
+    storageClass: ""
+    # Access Mode of the storage device being used for the PVC
+    accessMode: ReadWriteOnce
+
+  # This configures the Vault Statefulset to create a PVC for audit
+  # logs.  Once Vault is deployed, initialized and unseal, Vault must
+  # be configured to use this for audit logs.  This will be mounted to
+  # /vault/audit
+  # See https://www.vaultproject.io/docs/audit/index.html to know more
+  auditStorage:
+    enabled: false
+    # Size of the PVC created
+    size: 10Gi
+    # Name of the storage class to use.  If null it will use the
+    # configured default Storage Class.
+    storageClass: null
+    # Access Mode of the storage device being used for the PVC
+    accessMode: ReadWriteOnce
+
+  # Run Vault in "dev" mode. This requires no further setup, no state management,
+  # and no initialization. This is useful for experimenting with Vault without
+  # needing to unseal, store keys, et. al. All data is lost on restart - do not
+  # use dev mode for anything other than experimenting.
+  # See https://www.vaultproject.io/docs/concepts/dev-server.html to know more
+  dev:
+    enabled: false
+
+  # Run Vault in "standalone" mode. This is the default mode that will deploy if
+  # no arguments are given to helm. This requires a PVC for data storage to use
+  # the "file" backend.  This mode is not highly available and should not be scaled
+  # past a single replica.
+  standalone:
+    enabled: "-"
+
+    # config is a raw string of default configuration when using a Stateful
+    # deployment. Default is to use a PersistentVolumeClaim mounted at /vault/data
+    # and store data there. This is only used when using a Replica count of 1, and
+    # using a stateful set. This should be HCL.
+    config: |
+      ui = true
+
+      listener "tcp" {
+        tls_disable = 1
+        address = "[::]:8200"
+        cluster_address = "[::]:8201"
+      }
+      storage "file" {
+        path = "/vault/data"
+      }
+
+      # Example configuration for using auto-unseal, using Google Cloud KMS. The
+      # GKMS keys must already exist, and the cluster must have a service account
+      # that is authorized to access GCP KMS.
+      #seal "gcpckms" {
+      #   project     = "vault-helm-dev"
+      #   region      = "global"
+      #   key_ring    = "vault-helm-unseal-kr"
+      #   crypto_key  = "vault-helm-unseal-key"
+      #}
+
+  # Run Vault in "HA" mode. There are no storage requirements unless audit log
+  # persistence is required.  In HA mode Vault will configure itself to use Consul
+  # for its storage backend.  The default configuration provided will work the Consul
+  # Helm project by default.  It is possible to manually configure Vault to use a
+  # different HA backend.
+  ha:
+    enabled: true
+    replicas: ${replicas}
+
+    # Enables Vault's integrated Raft storage.  Unlike the typical HA modes where
+    # Vault's persistence is external (such as Consul), enabling Raft mode will create
+    # persistent volumes for Vault to store data according to the configuration under server.dataStorage.
+    # The Vault cluster will coordinate leader elections and failovers internally.
+    raft:
+
+      # Enables Raft integrated storage
+      enabled: ${raft_enable}
+      # Set the Node Raft ID to the name of the pod
+      setNodeId: ${raft_set_node_id}
+      config: ${server_configuration}
+    # config is a raw string of default configuration when using a Stateful
+    # deployment. Default is to use a Consul for its HA storage backend.
+    # This should be HCL.
+    config: ${server_configuration}
+
+    # A disruption budget limits the number of pods of a replicated application
+    # that are down simultaneously from voluntary disruptions
+    disruptionBudget:
+      enabled: true
+
+    # maxUnavailable will default to (n/2)-1 where n is the number of
+    # replicas. If you'd like a custom value, you can specify an override here.
+      maxUnavailable: null
+
+  # Definition of the serviceAccount used to run Vault.
+  serviceAccount:
+    # Extra annotations for the serviceAccount definition. This should be a
+    # multi-line string formatted as a map of the annotations to apply to the
+    # serviceAccount.
+    annotations: {}
+
+# Vault UI
+ui:
+  # True if you want to create a Service entry for the Vault UI.
   #
-  # Configure additional environment variables for the Vault containers
-  extraEnv: ${vault_env}
-  #   - name: VAULT_API_ADDR
-  #     value: "https://vault.internal.domain.name:8200"
-  extraContainers: ${vault_extra_containers}
-  ## Additional containers to be added to the Vault pod
-  # - name: vault-sidecar
-  #   image: vault-sidecar:latest
-  #   volumeMounts:
-  #   - name: some-mount
-  #     mountPath: /some/path
-  extraVolumes: ${vault_extra_volumes}
-  extraVolumeMounts: ${vault_extra_volume_mounts}
-  # Log level
-  # https://www.vaultproject.io/docs/commands/server.html#log-level
-  logLevel: ${vault_log_level}
-  ## Additional volumes to the vault pod.
-  # - name: extra-volume
-  #   secret:
-  #     secretName: some-secret
-  liveness:
-    aliveIfUninitialized: true
-  readiness:
-    readyIfSealed: false
-    readyIfStandby: true
-    readyIfUninitialized: true
-  # Set the `VAULT_API_ADDR` environment variable to the Pod IP Address
-  # This is the address (full URL) to advertise to other Vault servers in the cluster for client redirection.
-  # See https://www.vaultproject.io/docs/configuration/#api_addr
-  podApiAddress: ${pod_api_address}
-  config: ${vault_config}
+  # serviceType can be used to control the type of service created. For
+  # example, setting this to "LoadBalancer" will create an external load
+  # balancer (for supported K8S installations) to access the UI.
+  enabled: false
+  serviceType: "ClusterIP"
+  serviceNodePort: null
+  externalPort: 8200
+
+  # loadBalancerSourceRanges:
+  #   - 10.0.0.0/16
+  #   - 1.78.23.3/32
+
+  # loadBalancerIP:
+
+  # Extra annotations to attach to the ui service
+  # This should be a multi-line string mapping directly to the a map of
+  # the annotations to apply to the ui service
+  annotations: {}
