--- a/modules/vault/pvc/templates/pvc.yaml
+++ b/modules/vault/pvc/templates/pvc.yaml
@@ -19,4 +19,5 @@ spec:
   {{- with $values.spec }}
   {{- toYaml . | nindent 2}}
   {{- end }}
+  volumeName: {{ $values.volumeNamePrefix }}{{ $i }}
 {{- end }}
